--- a/src/PetApplication/Views/PetAnimals/Create.cshtml
+++ b/src/PetApplication/Views/PetAnimals/Create.cshtml
@@ -9,7 +9,7 @@
         <img src="~/Images/banner.jpg" />
     </div>
     
-    <div class="cart-table-area width">
+    <div class="cart-table-area view-width">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
